# markdown-reader

./: .gitignore  .mcp.json  .mcp.json.example  LICENSE  README.md  package-lock.json  package.json
channel/: markdown-reader-channel.ts  package-lock.json  package.json
docs/: chapter-presentation-channels.md
docs/plans/: 2026-03-26-reader-initiated-session-connect.md
docs/superpowers/specs/: 2026-03-25-markdown-reader-design.md  2026-03-26-mcp-inline-comments-design.md
frontend/: comments.js  main.js  renderer.js  sidebar.js  styles.css  tabs.js
openspec/changes/markdown-reader/: design.md  proposal.md  tasks.md
openspec/changes/markdown-reader/specs/cli-entry/: spec.md
openspec/changes/markdown-reader/specs/file-watching/: spec.md
openspec/changes/markdown-reader/specs/history-store/: spec.md
openspec/changes/markdown-reader/specs/markdown-rendering/: spec.md
openspec/changes/markdown-reader/specs/sidebar-history/: spec.md
openspec/changes/markdown-reader/specs/tab-management/: spec.md
openspec/changes/mcp-inline-comments/: design.md  proposal.md  tasks.md
openspec/changes/mcp-inline-comments/specs/inline-comments-ui/: spec.md
openspec/changes/mcp-inline-comments/specs/ipc-subscriptions/: spec.md
openspec/changes/paste-to-comment/: design.md  proposal.md  tasks.md
openspec/changes/reader-initiated-session-connect/: design.md  proposal.md  tasks.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  history.rs  ipc.rs  lib.rs  main.rs  watcher.rs  workspace.rs
(+6 files in other folders)
