[package]
name = "markdown-reader"
version = "0.1.0"
description = "Lightweight Markdown reader with Mermaid support"
authors = ["pol"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["image-png"] }
notify = "7"
notify-debouncer-mini = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
tokio = { version = "1", features = ["net", "io-util", "sync", "rt"] }
libc = "0.2"
tauri-plugin-clipboard-manager = "2.3.2"

[dev-dependencies]
tempfile = "3"
